--- a/packages/fields/fields-templates.html
+++ b/packages/fields/fields-templates.html
@@ -1,11 +1,23 @@
-<template name="fieldsBase">
+<template name="fieldsSimple">
     {{{this}}}
 </template>
 
-<template name="fieldsBare">
+<template name="fieldsSelect">
     {{{this}}}
 </template>
 
-<template name="fieldsActions">
+<template name="fieldsRich">
+    {{{this}}}
+</template>
+
+<template name="fieldsDate">
+    {{{this}}}
+</template>
+
+<template name="fieldsDuration">
+    {{{this}}}
+</template>
+
+<template name="fieldsComplex">
     {{{this}}}
 </template>
