--- a/fields2.html
+++ b/fields2.html
@@ -91,7 +91,16 @@
                 {{#fieldsField 'element'}}
                 {{> multiField}}
                 {{/fieldsField}}
-                <button type="button" class="btn fields-remove pull-right"><i class="icon-trash"></i></button></fields>
+                <div class="btn-group pull-right">
+                {{#if upMoveable}}
+                <button type="button" class="btn fields-move-up">
+                    <i class="icon-arrow-up"></i></button>
+                {{/if}}
+                {{#if downMoveable}}
+                <button type="button" class="btn fields-move-down"><i class="icon-arrow-down"></i></button>
+                {{/if}}
+                <button type="button" class="btn fields-remove"><i class="icon-trash"></i></button></fields>
+                </div>
                 </div>
             {{/each}}
             {{/if}}
