--- a/packages/fields/fields-templates.html
+++ b/packages/fields/fields-templates.html
@@ -2,6 +2,10 @@
     {{{this}}}
 </template>
 
+<template name="fieldsNumber">
+    {{{this}}}
+</template>
+
 <template name="fieldsSelect">
     {{{this}}}
 </template>
